# Minesweeper

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/core/: Board.cpp  Board.hpp  MineGenerator.cpp  MineGenerator.hpp  Minesweeper.cpp  Minesweeper.hpp  MinesweeperCRTP.hpp
src/graphics/: Game.cpp  Game.hpp  MinesweeperSFML.cpp  MinesweeperSFML.hpp  MouseListener.cpp  MouseListener.hpp  TexturesManager.hpp
