cmake_minimum_required(VERSION 3.22.1)

project(Minesweeper)

set(CMAKE_CXX_STANDARD 17)

set(GCC_WARNINGS
    -Werror
    -Wall
    -Wextra
    -Wshadow
    -Wnon-virtual-dtor
    -Wold-style-cast
    -Wcast-align
    -Wunused
    -Woverloaded-virtual
    -Wpedantic
    -Wconversion
    -Wsign-conversion
    -Wnull-dereference
    -Wdouble-promotion
    -Wimplicit-fallthrough
    -Wmisleading-indentation
    -Wduplicated-cond
    -Wduplicated-branches
    -Wlogical-op
    -Wuseless-cast
)

add_compile_options(${GCC_WARNINGS})

add_subdirectory(src)
